# intern1

./: .env.example  .gitignore  DEPLOY.md  DEPLOY_GUIDE.md  PROJECT_STATUS_AND_SETUP.md  README.md  docker-compose.yml  render.yaml
backend/: .env.example  Dockerfile.local  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_onboarding.py  0002_platform_schema.py  0003_notifications_schema.py  0004_auth_tables.py
backend/app/: main.py
backend/app/api/: dependencies.py  middleware.py
backend/app/api/v1/: router.py  schemas.py
backend/app/application/client/: dto.py  mappers.py
backend/app/application/onboarding/: dto.py  mappers.py  ports.py
backend/app/core/: config.py  database.py  exceptions.py  logging.py  security.py
backend/app/domain/client/: entities.py  enums.py  repositories.py
backend/app/domain/onboarding/: entities.py  enums.py  events.py  repositories.py  services.py  value_objects.py
backend/app/domain/reference/: entities.py
backend/app/domain/trading/: entities.py
backend/app/infrastructure/audit/: audit_logger.py  event_publisher.py
backend/app/infrastructure/db/: client_repository.py  models.py  models_auth.py  models_client.py  models_notifications.py  models_performance.py  models_portfolio.py  models_reference.py  models_trading.py  (+1 more)
backend/scripts/: process_outbox.py  seed_demo.py  smoke_test.py
backend/tests/: test_onboarding_aggregate.py  test_risk_profiling.py
backend/tests/integration/: test_kra_integration.py
backend/tests/mocks/: __init__.py  kra_sandbox.py
(+124 files in other folders)
