[project]
name = "pms-onboarding"
version = "1.0.0"
description = "SEBI-compliant discretionary PMS — Client Onboarding & KYC service"
requires-python = ">=3.12"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 95
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
